remove redundant hash logic
